--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.10"
 Flask = "3.0.3"
+flask-sqlalchemy = "3.1.1"
+flask-paginate = "2024.4.12"
 
 [build-system]
 requires = ["poetry-core"]
