--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ package-mode = false
 python = "^3.10"
 Flask = "3.0.3"
 flask-sqlalchemy = "3.1.1"
+flask-minify = "0.48"
 
 [build-system]
 requires = ["poetry-core"]
