--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 blinker==1.8.2 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+flask-minify==0.48 ; python_version >= "3.10" and python_version < "4.0"
 flask-sqlalchemy==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
 flask==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==3.0.3 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.10"
+htmlminf==0.1.13 ; python_version >= "3.10" and python_version < "4.0"
 itsdangerous==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
+jsmin==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
+lesscpy==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
+ply==3.11 ; python_version >= "3.10" and python_version < "4.0"
+rcssmin==1.1.2 ; python_version >= "3.10" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.34 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 werkzeug==3.0.4 ; python_version >= "3.10" and python_version < "4.0"
+xxhash==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
