--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = "Directory de restaurants"
 authors = ["Albert Ferran Casas <albert.ferran@gmail.com>"]
 license = "LICENSE"
 readme = "README.md"
-package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
 Flask = "3.0.3"
 flask-sqlalchemy = "3.1.1"
 flask-minify = "0.48"
+flask-migrate = "4.0.7"
 
 [build-system]
 requires = ["poetry-core"]
