--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+alembic==1.13.2 ; python_version >= "3.10" and python_version < "4.0"
 blinker==1.8.2 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+flask-migrate==4.0.7 ; python_version >= "3.10" and python_version < "4.0"
 flask-minify==0.48 ; python_version >= "3.10" and python_version < "4.0"
 flask-sqlalchemy==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
 flask==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
@@ -10,6 +12,7 @@ itsdangerous==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
 jsmin==3.0.1 ; python_version >= "3.10" and python_version < "4.0"
 lesscpy==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
+mako==1.3.5 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
 ply==3.11 ; python_version >= "3.10" and python_version < "4.0"
 rcssmin==1.1.2 ; python_version >= "3.10" and python_version < "4.0"
