--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ Flask = "3.0.3"
 flask-sqlalchemy = "3.1.1"
 flask-minify = "0.48"
 flask-migrate = "4.0.7"
+flask-login = "0.6.3"
 
 [tool.poetry.group.dev.dependencies]
 commitizen = "^3.29.0"
