--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.13.2 ; python_version >= "3.10" and python_version < "4.0"
 blinker==1.8.2 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+flask-login==0.6.3 ; python_version >= "3.10" and python_version < "4.0"
 flask-migrate==4.0.7 ; python_version >= "3.10" and python_version < "4.0"
 flask-minify==0.48 ; python_version >= "3.10" and python_version < "4.0"
 flask-sqlalchemy==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
