refactor: Add flask-wtf package

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ flask-login==0.6.3 ; python_version >= "3.10" and python_version < "4.0"
 flask-migrate==4.0.7 ; python_version >= "3.10" and python_version < "4.0"
 flask-minify==0.48 ; python_version >= "3.10" and python_version < "4.0"
 flask-sqlalchemy==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
+flask-wtf==1.2.1 ; python_version >= "3.10" and python_version < "4.0"
 flask==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
 greenlet==3.0.3 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.10"
 htmlminf==0.1.13 ; python_version >= "3.10" and python_version < "4.0"
@@ -21,4 +22,5 @@ six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.34 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 werkzeug==3.0.4 ; python_version >= "3.10" and python_version < "4.0"
+wtforms==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
 xxhash==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
