--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flask-sqlalchemy = "3.1.1"
 flask-minify = "0.48"
 flask-migrate = "4.0.7"
 flask-login = "0.6.3"
+flask-wtf = "1.2.1"
 
 [tool.poetry.group.dev.dependencies]
 commitizen = "^3.29.0"
