--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ flask-minify = "0.48"
 flask-migrate = "4.0.7"
 flask-login = "0.6.3"
 flask-wtf = "1.2.1"
+flask-babel = "4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 commitizen = "^3.29.0"
