--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.13.2 ; python_version >= "3.10" and python_version < "4.0"
+babel==2.16.0 ; python_version >= "3.10" and python_version < "4.0"
 blinker==1.8.2 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+flask-babel==4.0.0 ; python_version >= "3.10" and python_version < "4.0"
 flask-login==0.6.3 ; python_version >= "3.10" and python_version < "4.0"
 flask-migrate==4.0.7 ; python_version >= "3.10" and python_version < "4.0"
 flask-minify==0.48 ; python_version >= "3.10" and python_version < "4.0"
@@ -17,6 +19,7 @@ lesscpy==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
 mako==1.3.5 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
 ply==3.11 ; python_version >= "3.10" and python_version < "4.0"
+pytz==2024.1 ; python_version >= "3.10" and python_version < "4.0"
 rcssmin==1.1.2 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.34 ; python_version >= "3.10" and python_version < "4.0"
